[package]
name = "wasm-markdown"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Masato TOYOSHIMA <phoepsilonix@phoepsilonix.love"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gh-emoji = "1.0.8"
once_cell = "1.19.0"
pulldown-cmark = { git = "https://github.com/raphlinus/pulldown-cmark.git", branch = "master"}
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
wasm-bindgen = "0.2.92"

[dev-dependencies]
syntect = "5.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
