[package]
name = "wasm-markdown"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Masato TOYOSHIMA <phoepsilonix@phoepsilonix.love"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gh-emoji = "1.0.8"
#once_cell = "1.19.0"
pulldown-cmark = { git = "https://github.com/raphlinus/pulldown-cmark.git", branch = "master"}
#syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
wasm-bindgen = "0.2.92"
#console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }


[dev-dependencies]
#syntect = "5.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
#default = ["wee_alloc"]
default = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-O3", "--enable-mutable-globals"]

[profile.release]
debug = true
strip = true
lto = true
overflow-checks = true
codegen-units = 1
panic = "abort"
opt-level = 3
